--- a/Number Base Conversions/Readme
+++ b/Number Base Conversions/Readme
@@ -1,1 +1,2 @@
-
+This project goes back to the basics. All it is, is a number base converter from binary to decimal to hexadecimal, or any
+combination of those conversions.
