--- a/Payroll Simulator/Readme
+++ b/Payroll Simulator/Readme
@@ -1,1 +1,2 @@
-As is popular with most computer scientists, here is a demonstration of 
+As is popular with many computer scientists, here is a demonstration of a linked list working with classes of
+employees on a payroll, simulating payraises and salaries.
